syntax = "proto3";

package gnss_radar;
option go_package = "github.com/Gokert/gnss-radar/tree/main/pb/gnss-radar/grpc;gnss_radar";

service GnssService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}

message GetStatusRequest {
  bool isActual = 10;
}

message GetStatusResponse {
  bool result = 10;
}
